# civictech-hackathon-2025

./: .gitignore  README.md  analysis.md  cms_agent.py  cms_agent_web.py  download_cms_files.py  main.py  pyproject.toml  query_vector_embeddings.py  requirements.txt  transform_files_to_embeddings.py
