[project]
name = "202507-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.14",
    "bs4>=0.0.2",
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.9",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pycryptodome>=3.23.0",
    "pypdf2>=3.0.1",
    "streamlit>=1.47.1",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
